--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -913,7 +913,7 @@
       {
         "file": "estilos.scss",
         "config": {
-          "customOutput": "C:\\Users\\korix\\OneDrive\\Desktop\\Proyecto\\css\\estilos.css"
+          "customOutput": "C:\\Users\\korix\\OneDrive\\Documents\\GitHub\\IHC-Sistema-Vacunacion\\css\\estilos.css"
         }
       }
     ]
